--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-eslint": "^0.15.0",
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.4",
+    "lodash": "^3.10.0",
     "react": "^0.13.3",
     "react-router": "^0.13.6",
     "reactify": "^1.1.1",
